--- a/gpAux/gpdemo/Makefile
+++ b/gpAux/gpdemo/Makefile
@@ -19,15 +19,15 @@ export with_openssl
 MASTER_PORT ?= 15432
 STANDBY_PORT ?= 16432
 PORT_BASE ?= 25432
-NUM_PRIMARY_MIRROR_PAIRS ?= 3
+NUM_PRIMARY_MIRROR_PAIRS ?= 2
 BLDWRAP_POSTGRES_CONF_ADDONS := fsync=off $(BLDWRAP_POSTGRES_CONF_ADDONS)
 
 ifeq ($(WITH_MIRRORS), )
-WITH_MIRRORS = true
+WITH_MIRRORS = false
 endif
 
 ifeq ($(WITH_MIRRORS), true)
-WITH_STANDBY = true
+WITH_STANDBY = false
 endif
 
 export MASTER_DEMO_PORT=$(MASTER_PORT)
